bk_ida/gccida/c3/visualize_scheduled_insns
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/visualize_scheduled_insns/src/sched-vis.c:1384:30: error: use of undeclared identifier 'unk_72B187'
sprintf( &v8[v9], " %-33s", &unk_72B187); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/visualize_scheduled_insns/src/obj/sched-vis.o] Error 1
